Add info in HTML page to use the Ray Charles archive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <body>
         Web Worker + file api (only work if file < 2GB <a href="https://github.com/kripken/emscripten/issues/5250"> see emscripten issue </a>)<br/>
         See result in JS console<br/>
-        For now, the page needs to be reloaded to switch to another ZIM file, and it does not support split ZIM files.
+        For now, the page needs to be reloaded to switch to another ZIM file, and it does not support split ZIM files.<br/>
+        Reading the content is currently hard-coded with the Ray Charles ZIM file.
         <br/>
       <input type="file" id="your-files">
       <script>
