--- a/index.html
+++ b/index.html
@@ -23,25 +23,80 @@
             worker.postMessage({action: "init", files: files});
             },false);
             
+        var reader;
         var content;
-        function callC() {
+        function callGetArticleContentByUrl() {
             var tmpMessageChannel = new MessageChannel();
             var t0 = performance.now();
             tmpMessageChannel.port1.onmessage = function(event2){
                 var t1 = performance.now();
                 var readTime = Math.round(t1 - t0);
                 document.getElementById("status").textContent = "Content read in " + readTime + " milliseconds";
-                console.log("response given by the webworker in " + readTime + " milliseconds", event2.data);
+                console.log("article content given by the webworker in " + readTime + " milliseconds", event2.data);
                 content = event2.data;
             };
             document.getElementById("status").textContent = "Reading content...";
-            worker.postMessage({action: "callC", files: files, url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
+            worker.postMessage({action: "getArticleContentByUrl", files: files, url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
+        }
+        function callGetArticleCount() {
+            var tmpMessageChannel = new MessageChannel();
+            var t0 = performance.now();
+            tmpMessageChannel.port1.onmessage = function(event2){
+                var t1 = performance.now();
+                var readTime = Math.round(t1 - t0);
+                document.getElementById("status").textContent = "The ZIM file has " + event2.data + " articles";
+                console.log("article count given by the webworker in " + readTime + " milliseconds", event2.data);
+            };
+            document.getElementById("status").textContent = "Reading articleCount...";
+            worker.postMessage({action: "getArticleCount", files: files}, [tmpMessageChannel.port2]);
+        }
+        function callGetReader() {
+            var tmpMessageChannel = new MessageChannel();
+            var t0 = performance.now();
+            tmpMessageChannel.port1.onmessage = function(event2){
+                var t1 = performance.now();
+                var readTime = Math.round(t1 - t0);
+                document.getElementById("status").textContent = "Reader initialized";
+                console.log("Reader initialized in " + readTime + " milliseconds", event2.data);
+                reader = event2.data;
+            };
+            document.getElementById("status").textContent = "Initializing Reader...";
+            worker.postMessage({action: "getReader", files: files}, [tmpMessageChannel.port2]);
+        }
+        function callGetArticleCountFromReader() {
+            var tmpMessageChannel = new MessageChannel();
+            var t0 = performance.now();
+            tmpMessageChannel.port1.onmessage = function(event2){
+                var t1 = performance.now();
+                var readTime = Math.round(t1 - t0);
+                document.getElementById("status").textContent = "The ZIM file has " + event2.data + " articles";
+                console.log("article count given by the webworker in " + readTime + " milliseconds", event2.data);
+            };
+            document.getElementById("status").textContent = "Reading articleCount...";
+            worker.postMessage({action: "getArticleCountFromReader", reader: reader}, [tmpMessageChannel.port2]);
+        }
+        function callGetEntryFromPath() {
+            var tmpMessageChannel = new MessageChannel();
+            var t0 = performance.now();
+            tmpMessageChannel.port1.onmessage = function(event2){
+                var t1 = performance.now();
+                var readTime = Math.round(t1 - t0);
+                document.getElementById("status").textContent = "Content read in " + readTime + " milliseconds";
+                console.log("article content given by the webworker in " + readTime + " milliseconds", event2.data);
+                content = event2.data;
+            };
+            document.getElementById("status").textContent = "Reading content...";
+            worker.postMessage({action: "getEntryFromPath", reader: reader, url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
         }
         function displayInIFrame() {
             window.frames[0].document.body.innerHTML = content;
         }
       </script>
-      <button type="button" onclick="callC()">Test javascript to C++ call</button>
+      <button type="button" onclick="callGetReader()">Initialize reader (with kiwix-lib)</button>
+      <button type="button" onclick="callGetArticleCountFromReader()">Read article count from Reader (with kiwix-lib)</button>
+      <button type="button" onclick="callGetEntryFromPath()">Read article content (with kiwix-lib)</button>
+      <button type="button" onclick="callGetArticleCount()">Read article count (with libzim)</button>
+      <button type="button" onclick="callGetArticleContentByUrl()">Read article content (with libzim)</button>
       <button type="button" onclick="displayInIFrame()">Display content in iframe</button>
       <br/>
       <div id="status"></div>
