--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
             console.log("new files selected");
             worker.postMessage({action: "init", files: files});
             },false);
-            
-        var reader;
         var content;
         function callGetArticleContentByUrl() {
             var tmpMessageChannel = new MessageChannel();
@@ -50,7 +48,7 @@
             document.getElementById("status").textContent = "Reading articleCount...";
             worker.postMessage({action: "getArticleCount", files: files}, [tmpMessageChannel.port2]);
         }
-        function callGetReader() {
+        function callInitReader() {
             var tmpMessageChannel = new MessageChannel();
             var t0 = performance.now();
             tmpMessageChannel.port1.onmessage = function(event2){
@@ -58,10 +56,9 @@
                 var readTime = Math.round(t1 - t0);
                 document.getElementById("status").textContent = "Reader initialized";
                 console.log("Reader initialized in " + readTime + " milliseconds", event2.data);
-                reader = event2.data;
             };
             document.getElementById("status").textContent = "Initializing Reader...";
-            worker.postMessage({action: "getReader", files: files}, [tmpMessageChannel.port2]);
+            worker.postMessage({action: "initReader", files: files}, [tmpMessageChannel.port2]);
         }
         function callGetArticleCountFromReader() {
             var tmpMessageChannel = new MessageChannel();
@@ -73,7 +70,7 @@
                 console.log("article count given by the webworker in " + readTime + " milliseconds", event2.data);
             };
             document.getElementById("status").textContent = "Reading articleCount...";
-            worker.postMessage({action: "getArticleCountFromReader", reader: reader}, [tmpMessageChannel.port2]);
+            worker.postMessage({action: "getArticleCountFromReader"}, [tmpMessageChannel.port2]);
         }
         function callGetEntryFromPath() {
             var tmpMessageChannel = new MessageChannel();
@@ -86,13 +83,13 @@
                 content = event2.data;
             };
             document.getElementById("status").textContent = "Reading content...";
-            worker.postMessage({action: "getEntryFromPath", reader: reader, url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
+            worker.postMessage({action: "getEntryFromPath", url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
         }
         function displayInIFrame() {
             window.frames[0].document.body.innerHTML = content;
         }
       </script>
-      <button type="button" onclick="callGetReader()">Initialize reader (with kiwix-lib)</button>
+      <button type="button" onclick="callInitReader()">Initialize reader (with kiwix-lib)</button>
       <button type="button" onclick="callGetArticleCountFromReader()">Read article count from Reader (with kiwix-lib)</button>
       <button type="button" onclick="callGetEntryFromPath()">Read article content (with kiwix-lib)</button>
       <button type="button" onclick="callGetArticleCount()">Read article count (with libzim)</button>
