--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
             console.log("new files selected");
             worker.postMessage({action: "init", files: files});
             },false);
+        function callGetArticleCount() {
+            var tmpMessageChannel = new MessageChannel();
+            var t0 = performance.now();
+            tmpMessageChannel.port1.onmessage = function(event2){
+                var t1 = performance.now();
+                var readTime = Math.round(t1 - t0);
+                document.getElementById("status").textContent = "The ZIM file has " + event2.data + " articles";
+                console.log("article count given by the webworker in " + readTime + " milliseconds", event2.data);
+            };
+            document.getElementById("status").textContent = "Reading articleCount...";
+            worker.postMessage({action: "getArticleCount", files: files}, [tmpMessageChannel.port2]);
+        }
+
         var content;
         function callGetArticleContentByUrl() {
             var tmpMessageChannel = new MessageChannel();
@@ -35,18 +48,6 @@
             };
             document.getElementById("status").textContent = "Reading content...";
             worker.postMessage({action: "getArticleContentByUrl", files: files, url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
-        }
-        function callGetArticleCount() {
-            var tmpMessageChannel = new MessageChannel();
-            var t0 = performance.now();
-            tmpMessageChannel.port1.onmessage = function(event2){
-                var t1 = performance.now();
-                var readTime = Math.round(t1 - t0);
-                document.getElementById("status").textContent = "The ZIM file has " + event2.data + " articles";
-                console.log("article count given by the webworker in " + readTime + " milliseconds", event2.data);
-            };
-            document.getElementById("status").textContent = "Reading articleCount...";
-            worker.postMessage({action: "getArticleCount", files: files}, [tmpMessageChannel.port2]);
         }
         function callInitReader() {
             var tmpMessageChannel = new MessageChannel();
@@ -72,7 +73,7 @@
             document.getElementById("status").textContent = "Reading articleCount...";
             worker.postMessage({action: "getArticleCountFromReader"}, [tmpMessageChannel.port2]);
         }
-        function callGetEntryFromPath() {
+        function callGetEntryFromPathAndReader() {
             var tmpMessageChannel = new MessageChannel();
             var t0 = performance.now();
             tmpMessageChannel.port1.onmessage = function(event2){
@@ -83,17 +84,19 @@
                 content = event2.data;
             };
             document.getElementById("status").textContent = "Reading content...";
-            worker.postMessage({action: "getEntryFromPath", url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
+            worker.postMessage({action: "getEntryFromPathAndReader", url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
         }
         function displayInIFrame() {
             window.frames[0].document.body.innerHTML = content;
         }
       </script>
-      <button type="button" onclick="callInitReader()">Initialize reader (with kiwix-lib)</button>
-      <button type="button" onclick="callGetArticleCountFromReader()">Read article count from Reader (with kiwix-lib)</button>
-      <button type="button" onclick="callGetEntryFromPath()">Read article content (with kiwix-lib)</button>
-      <button type="button" onclick="callGetArticleCount()">Read article count (with libzim)</button>
+      <button type="button" onclick="callGetArticleCount()">Read article count (with kiwix-lib)</button>
+      <br/>
+      Other tests : <br/>
       <button type="button" onclick="callGetArticleContentByUrl()">Read article content (with libzim)</button>
+      <button type="button" onclick="callInitReader()">Initialize reader (with kiwix-lib) and keep it</button>
+      <button type="button" onclick="callGetArticleCountFromReader()">Read article count from Reader (with kiwix-lib)</button>
+      <button type="button" onclick="callGetEntryFromPathAndReader()">Read article content from Reader(with kiwix-lib)</button>
       <button type="button" onclick="displayInIFrame()">Display content in iframe</button>
       <br/>
       <div id="status"></div>
