Change index.html because switching ZIM file now works

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
           <h1>Prototype to test libzim compiled with emscripten</h1>
         Web Worker + file api (only works if file < 2GB <a href="https://github.com/kripken/emscripten/issues/5250"> see emscripten issue </a>)<br/>
         See result in JS console and/or in the iframe below<br/>
-        For now, the page needs to be reloaded to switch to another ZIM file, and it does not support split ZIM files.<br/>
+        For now, split ZIM files are not supported.<br/>
         If you want to do a quick test, you can choose the file wikipedia_en_ray_charles_2015-06.zim or wikipedia_en_ray_charles_2018-10.zim files (that can be downloaded from <a href="https://download.kiwix.org/zim/wikipedia/">https://download.kiwix.org/zim/wikipedia/</a>), and use "A/Baby_Grand.html" as the URL.
         <br/>
         <br/>
