--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         Web Worker + file api (only works if file < 2GB <a href="https://github.com/kripken/emscripten/issues/5250"> see emscripten issue </a>)<br/>
         See result in JS console and/or in the iframe below<br/>
         For now, split ZIM files are not supported.<br/>
-        If you want to do a quick test, you can choose the file wikipedia_en_ray_charles_2015-06.zim or wikipedia_en_ray_charles_2018-10.zim files (that can be downloaded from <a href="https://download.kiwix.org/zim/wikipedia/">https://download.kiwix.org/zim/wikipedia/</a>), and use "A/Baby_Grand.html" as the URL.
+        If you want to do a quick test, you can choose the file <a href="https://download.kiwix.org/zim/wikipedia/wikipedia_en_ray_charles_maxi_2021-10.zim">wikipedia_en_ray_charles_maxi_2021-10.zim</a>, and use "A/Baby_Grand" as the URL.
         <br/>
         <br/>
         ZIM file(s) : <input type="file" id="your-files" multiple>
       <br/>
-      URL : <input type="text" id="url" value="A/Baby_Grand.html">
+      URL : <input type="text" id="url" value="A/Baby_Grand">
       <br/>
       <script>
         var worker = new Worker("a.out.js");
