--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
         <br/>
         ZIM file(s) : <input type="file" id="your-files" multiple>
       <br/>
-      URL : <input type="text" id="url" value="A/Baby_Grand">
-      <br/>
       <script>
         var worker = new Worker("a.out.js");
         var control = document.getElementById("your-files");
@@ -32,32 +30,63 @@
                 console.log("article count given by the webworker in " + readTime + " milliseconds", event2.data);
             };
             document.getElementById("status").textContent = "Reading articleCount...";
-            worker.postMessage({action: "getArticleCount", files: files}, [tmpMessageChannel.port2]);
+            worker.postMessage({action: "getArticleCount"}, [tmpMessageChannel.port2]);
+        }
+        function callGetMimetypeByUrl() {
+            var tmpMessageChannel = new MessageChannel();
+            var url = document.getElementById("url").value;
+            var t0 = performance.now();
+            tmpMessageChannel.port1.onmessage = function(event2){
+                var t1 = performance.now();
+                var readTime = Math.round(t1 - t0);
+                document.getElementById("status").textContent = "The MIME-type of " + url + " is " + event2.data;
+                console.log("MimeType given by the webworker for " + url + " in " + readTime + " milliseconds", event2.data);
+            };
+            document.getElementById("status").textContent = "Reading articleCount...";
+            worker.postMessage({action: "getMimetypeByUrl", url: url}, [tmpMessageChannel.port2]);
         }
 
         var content;
-        function callGetArticleContentByUrl() {
+        function callGetContentByUrl() {
             var tmpMessageChannel = new MessageChannel();
+            var url = document.getElementById("url").value;
             var t0 = performance.now();
             tmpMessageChannel.port1.onmessage = function(event2){
                 var t1 = performance.now();
                 var readTime = Math.round(t1 - t0);
                 document.getElementById("status").textContent = "Content read in " + readTime + " milliseconds";
-                console.log("article content given by the webworker in " + readTime + " milliseconds", event2.data);
+                console.log("Content given by the webworker in " + readTime + " milliseconds", event2.data);
                 content = event2.data;
             };
-            document.getElementById("status").textContent = "Reading content...";
-            worker.postMessage({action: "getArticleContentByUrl", files: files, url: document.getElementById("url").value}, [tmpMessageChannel.port2]);
+            document.getElementById("status").textContent = "Reading content for url " + url;
+            worker.postMessage({action: "getContentByUrl", url: url}, [tmpMessageChannel.port2]);
         }
-        function displayInIFrame() {
+        function displayTextInIFrame() {
             window.frames[0].document.body.innerHTML = content;
         }
+        function displayImageInIFrame() {
+            window.frames[0].document.body.innerHTML = "";
+            var node = document.createElement("img");
+            console.log("image content length " + content.length);
+            var blob = new Blob([content], {
+                type: "image/webp"
+            });
+            var url = URL.createObjectURL(blob);
+            node.addEventListener('load', function () {
+                URL.revokeObjectURL(url);
+            });
+            node.setAttribute("src", url);
+            window.frames[0].document.body.appendChild(node);
+        }
       </script>
-      <button type="button" onclick="callGetArticleCount()">Read article count (with kiwix-lib)</button>
+      <button type="button" onclick="callGetArticleCount()">Read article count</button>
       <br/>
-      Other tests : <br/>
-      <button type="button" onclick="callGetArticleContentByUrl()">Read article content (with libzim)</button>
-      <button type="button" onclick="displayInIFrame()">Display content in iframe</button>
+      URL : <input type="text" id="url" value="A/Baby_Grand">
+      <br/>
+      <button type="button" onclick="callGetContentByUrl()">Read content by its URL</button>
+      <button type="button" onclick="callGetMimetypeByUrl()">Read MIME-type for an URL</button>
+      <button type="button" onclick="displayTextInIFrame()">Display text content in iframe</button>
+      <button type="button" onclick="displayImageInIFrame()">Display image in iframe</button>
       <br/>
       <div id="status"></div>
       <br/>
