--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
             // When the control has changed, there are new files
             files = control.files;
             console.log("new files selected");
-            worker.postMessage({action: "init", files: files});
+            var tmpMessageChannel = new MessageChannel();
+            tmpMessageChannel.port1.onmessage = function(event2){
+                console.log(event2.data);
+            };
+            worker.postMessage({action: "init", files: files}, [tmpMessageChannel.port2]);
             },false);
         function callGetArticleCount() {
             var tmpMessageChannel = new MessageChannel();
@@ -32,21 +36,7 @@
             document.getElementById("status").textContent = "Reading articleCount...";
             worker.postMessage({action: "getArticleCount"}, [tmpMessageChannel.port2]);
         }
-        function callGetMimetypeByUrl() {
-            var tmpMessageChannel = new MessageChannel();
-            var url = document.getElementById("url").value;
-            var t0 = performance.now();
-            tmpMessageChannel.port1.onmessage = function(event2){
-                var t1 = performance.now();
-                var readTime = Math.round(t1 - t0);
-                document.getElementById("status").textContent = "The MIME-type of " + url + " is " + event2.data;
-                console.log("MimeType given by the webworker for " + url + " in " + readTime + " milliseconds", event2.data);
-            };
-            document.getElementById("status").textContent = "Reading articleCount...";
-            worker.postMessage({action: "getMimetypeByUrl", url: url}, [tmpMessageChannel.port2]);
-        }
 
-        var content;
         function callGetContentByUrl() {
             var tmpMessageChannel = new MessageChannel();
             var url = document.getElementById("url").value;
@@ -56,38 +46,38 @@
                 var readTime = Math.round(t1 - t0);
                 document.getElementById("status").textContent = "Content read in " + readTime + " milliseconds";
                 console.log("Content given by the webworker in " + readTime + " milliseconds", event2.data);
-                content = event2.data;
+                mimetype = event2.data.mimetype;
+                content = event2.data.content;
+                if (mimetype && mimetype.startsWith('image')){
+                    // It's an image : let's create an image tag in the iframe to display it
+                    window.frames[0].document.body.innerHTML = "";
+                    var node = document.createElement("img");
+                    console.log("image content length " + content.length);
+                    var blob = new Blob([content], {
+                        type: "image"
+                    });
+                    var url = URL.createObjectURL(blob);
+                    node.addEventListener('load', function () {
+                        URL.revokeObjectURL(url);
+                    });
+                    node.setAttribute("src", url);
+                    window.frames[0].document.body.appendChild(node);
+                }
+                else {
+                    // Let's display the content directly in the iframe
+                    // TODO : TextDecoder is not supported by all platforms, see https://caniuse.com/?search=textdecoder
+                    window.frames[0].document.body.innerHTML = new TextDecoder().decode(content);
+                }
             };
             document.getElementById("status").textContent = "Reading content for url " + url;
             worker.postMessage({action: "getContentByUrl", url: url}, [tmpMessageChannel.port2]);
-        }
-        function displayTextInIFrame() {
-            // TODO : TextDecoder is not supported by all platforms, see https://caniuse.com/?search=textdecoder
-            window.frames[0].document.body.innerHTML = new TextDecoder().decode(content);
-        }
-        function displayImageInIFrame() {
-            window.frames[0].document.body.innerHTML = "";
-            var node = document.createElement("img");
-            console.log("image content length " + content.length);
-            var blob = new Blob([content], {
-                type: "image"
-            });
-            var url = URL.createObjectURL(blob);
-            node.addEventListener('load', function () {
-                URL.revokeObjectURL(url);
-            });
-            node.setAttribute("src", url);
-            window.frames[0].document.body.appendChild(node);
         }
       </script>
       <button type="button" onclick="callGetArticleCount()">Read article count</button>
       <br/>
       URL : <input type="text" id="url" value="A/Baby_Grand"> (you can use I/Baby_Grand_Billy_Joel.jpg.webp to test an image)
       <br/>
-      <button type="button" onclick="callGetContentByUrl()">Read content by its URL</button>
-      <button type="button" onclick="callGetMimetypeByUrl()">Read MIME-type for an URL</button>
-      <button type="button" onclick="displayTextInIFrame()">Display text content in iframe</button>
-      <button type="button" onclick="displayImageInIFrame()">Display image in iframe</button>
+      <button type="button" onclick="callGetContentByUrl()">Read content by its URL and display it</button>
       <br/>
       <div id="status"></div>
       <br/>
