Minor label change

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </script>
       <button type="button" onclick="callGetArticleCount()">Read article count</button>
       <br/>
-      Path : <input type="text" id="path" value="A/Baby_Grand"> (you can use I/Baby_Grand_Billy_Joel.jpg.webp to test an image)
+      Path : <input type="text" id="path" value="A/Baby_Grand"> (you can use I/Baby_Grand_Billy_Joel.jpg.webp to test an image, or some other articles from a search below)
       <br/>
       <button type="button" onclick="callGetContentByPath()">Read content by its Path and display it</button>
       <br/>
