Upgrade emscripten and libzim

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head><meta charset="utf-8"><title>Web Worker + file api zim reader</title></head>
       <body>
           <h1>Prototype to test libzim compiled with emscripten</h1>
-        Web Worker + file api (only works if file < 2GB <a href="https://github.com/kripken/emscripten/issues/5250"> see emscripten issue </a>)<br/>
+        Web Worker + file api<br/>
         See result in JS console and/or in the iframe below<br/>
         For now, split ZIM files are not supported.<br/>
         If you want to do a quick test, you can choose the file <a href="https://download.kiwix.org/zim/wikipedia/wikipedia_en_ray_charles_maxi_2021-10.zim">wikipedia_en_ray_charles_maxi_2021-10.zim</a>, and use "A/Baby_Grand" as the Path.
