Adjust instructions in index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
       <head><meta charset="utf-8"><title>Web Worker + file api zim reader</title></head>
       <body>
           <h1>Prototype to test libzim compiled with emscripten</h1>
-        Web Worker + file api<br/>
-        See result in JS console and/or in the iframe below<br/>
+        It uses a Web Worker to run libzim (compiled as wasm), and the File api to access the local file.<br/><br />
+        Select a local ZIM file, open your browser console, and wait for the message "wasm initialized" in the console. Afterwards you can use the buttons below.<br/>
         For now, split ZIM files are not supported.<br/>
         If you want to do a quick test, you can choose the file <a href="https://download.kiwix.org/zim/wikipedia/wikipedia_en_ray_charles_maxi_2021-10.zim">wikipedia_en_ray_charles_maxi_2021-10.zim</a>, and use "A/Baby_Grand" as the Path.
         <br/>
